--- a/sankofa-enterprise-real/backend/requirements.txt
+++ b/sankofa-enterprise-real/backend/requirements.txt
@@ -1,49 +1,60 @@
-# Core Framework - Python 3.12 Compatible
+# ===============================================================================
+# SANKOFA ENTERPRISE PRO - PRODUCTION REQUIREMENTS
+# Python 3.12+ Compatible - Enterprise Grade Dependencies
+# ===============================================================================
+
+# Core Web Framework
 Flask==3.0.0
 Flask-CORS==4.0.0
 Flask-JWT-Extended==4.6.0
+Werkzeug==3.0.1
 
-# Data Processing & ML (Python 3.12 compatible versions)
-numpy>=1.26.0
-pandas>=2.1.0
-scikit-learn>=1.3.0
-xgboost>=2.0.0
-lightgbm>=4.1.0
+# Data Processing & Machine Learning
+numpy==1.26.4
+pandas==2.2.3
+scikit-learn==1.5.2
+xgboost==2.1.2
+lightgbm==4.5.0
 
-# Database & Cache
+# Database & Caching
 redis==5.0.1
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.23
 
-# Security & Cryptography
-cryptography>=41.0.0
+# Security & Authentication
+cryptography==42.0.5
 bcrypt==4.1.2
 PyJWT==2.8.0
 
-# HTTP & API
-requests>=2.31.0
+# HTTP & API Communication
+requests==2.31.0
+urllib3==2.2.1
 
-# Data Validation
-marshmallow>=3.20.0
-cerberus>=1.3.0
+# Data Validation & Serialization
+marshmallow==3.20.2
+cerberus==1.3.5
+pydantic==2.7.0
 
-# Utilities
-python-dotenv>=1.0.0
-click>=8.1.0
-python-dateutil>=2.8.0
+# Configuration & Environment
+python-dotenv==1.0.1
+click==8.1.7
+python-dateutil==2.9.0
 
-# Performance
-gunicorn>=21.2.0
+# Production Server
+gunicorn==21.2.0
 
-# Development & Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
-black>=23.0.0
-flake8>=6.0.0
+# Development & Code Quality
+pytest==8.2.0
+pytest-cov==4.1.0
+black==24.3.0
+flake8==7.0.0
 
 # Scientific Computing
-scipy>=1.11.0
-joblib>=1.3.0
+scipy==1.12.0
+joblib==1.3.2
 
-# Configuration
-pydantic>=2.5.0
+# Monitoring & Logging
+structlog==24.1.0
+
+# Performance & Optimization
+greenlet==3.1.1
